[package]
name = "internet_use"
version = "0.1.0"
edition = "2024"

[lib]
name = "internet_use"
path = "src/lib.rs"

[[bin]]
name = "iu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
fantoccini = "0.21.5"
log = "0.4.27"
ollama-rs = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
